EDU-7045: wrapped contents to prevent horizontal scrolling (#359)

--- a/src/main/resources/scss/_inline-input-action.scss
+++ b/src/main/resources/scss/_inline-input-action.scss
@@ -2,6 +2,7 @@
 .inline-input-action {
   display: flex;
   align-items: flex-end;
+  flex-wrap: wrap;
 
   & > .govuk-form-group {
     @include govuk-responsive-margin(3, "right");
